# kurisuBot

./: .gitignore  kurisubot.cpp  meson.build  readme.md
src/: kurisubot.cpp
src/commands/: status.cpp  status.hpp
